# usage-deck

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
resources/ccusage-runner/: run-ccusage.mjs
scripts/: prepare-ccusage-sidecar.mjs
src/: App.tsx  dateRanges.ts  mockData.ts  styles.css  traySettings.ts  usageClient.ts  usageSchema.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
